--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ max_line_length = 120
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = REPONAME/_version.py
-versionfile_build = REPONAME/_version.py
+versionfile_source = whole_leg/_version.py
+versionfile_build = whole_leg/_version.py
 tag_prefix = v
 parentdir_prefix = 
